  * New DB-Schema 1533:
    - New extras/mysql_update/mysql-1533.sql.
    - Changed extras/upgrade_2.14.sql,
      extras/MySQL_AST_CREATE_tables.sql.
  * New function AutoAnswer (2018-007):
    - Changed www/vicidial/admin.php: Add new fields.
  * bin/ADMIN_backup.pl:
    - Add /etc/flyingpenguin.
  * Change license to AGPLv3:
    - Changed bin/ADMIN_backup.pl,
      www/vicidial/AST_stat_agent1.php
  * Add upstream Rev. 2939:
    - Changed UPGRADE,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/agc/vicidial.php,
      www/vicidial/admin.php,
      www/vicidial/help.php: Added script_top_dispo feature.
  * Add upstream Rev. 2940:
    - Changed UPGRADE,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/vicidial/AST_VICIDIAL_hopperlist.php,
      www/vicidial/admin.php,
      www/vicidial/admin_modify_lead.php,
      www/vicidial/help.php: Added bulk change function for campaign a. ingroup
        ranks in user modify page, Added source_id_display system option.
  * Add upstream Rev. 2941:
    - Changed www/vicidial/admin_modify_lead.php: Added CIDdisplay.
  * Add upstream Rev. 2942:
    - Changed www/vicidial/AST_parkstats.php: Added unique lead ID count.
  * Add upstream Rev. 2943:
    - Changed www/agc/vicidial.php: Fix for lead search screen hidden fields,
        issue #1079.
  * Add upstream Rev. 2944:
    - Changed New bin/AST_expired_list_exporter.pl.
    - www/vicidial/admin.php,
      www/vicidial/admin_lists_custom.php:Translated phrases fixes, issue #1081.
  * Add upstream Rev. 2945:
    - Changed www/agc/functions.php: Added entry_date as custom field SCRIPT
        type variable.
  * Add upstream Rev. 2946:
    - Changed agi/agi-VDAD_ALL_inbound.agi: Added source_id as optional channel
        variable to populate when inserting new leads.
  * Add upstream Rev. 2947:
    - Changed bin/FastAGI_log.pl,